--- a/package.json
+++ b/package.json
@@ -14,12 +14,28 @@
     "build-clean": "rimraf build",
     "build:ts": "webpack -p --config=./webpack.config.js",
     "build:types": "tsc  -p tsconfig.types.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "release": "npm-run-all -s release:*",
+    "release:check": "bash ./scripts/are-you-sure.sh",
+    "release:pre": "npm-run-all -p test build",
+    "release:publish": "npm run npm:publish",
+    "npm:publish": "npm publish"
   },
   "devDependencies": {
+    "@babel/core": "7.8.4",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.8.3",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-typescript": "7.8.3",
+    "@types/core-js": "2.5.3",
+    "@types/node": "13.7.4",
+    "babel-loader": "8.0.6",
+    "husky": "4.2.3",
+    "npm-run-all": "4.1.5",
+    "rimraf": "3.0.2",
     "typescript": "3.8.2",
     "webpack": " 4.41.6",
-    "webpack-cli": "3.3.11",
-    "webpack-merge": "4.2.2"
+    "webpack-cli": "3.3.11"
   }
 }
