--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -2,21 +2,22 @@
   "include": ["./src"],
   "exclude": [
     "node_modules",
-    ".npm",
-    "./src/**/*.tests.ts",
-    "./src/**/*.test.ts",
+    ".npm"
   ],
   "compilerOptions": {
+    "types": [],
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "target": "es5",
     "module": "esnext",
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "target": "es5",
-		"isolatedModules": true, // Disallow features that require cross-file information for emit.
+
+    // "esModuleInterop": true,
+    // "isolatedModules": true, // Disallow features that require cross-file information for emit.
+
     "downlevelIteration": true,               /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
     "declaration": true,                      /* Generates corresponding '.d.ts' file. */
     "declarationMap": true,                   /* Generates a sourcemap for each corresponding '.d.ts' file. */
